stepOne.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wik-tp4
spec:
  containers:
  - name: step-one
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 80
