ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wik-tp4-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/hostname: wik-tp4.example.com
spec:
  rules:
    - host: wik-tp4.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wik-tp4-service
                port:
                  number: 80
